--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aiden's Chess vs Bot</title>
+  <title>Aiden's Chess Bot</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chessboard.js/1.0.0/chessboard-1.0.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/stockfish@11.0.0/dist/stockfish.min.js"></script>
@@ -58,7 +58,7 @@
   </style>
 </head>
 <body>
-  <h1>♟ Aiden vs Stockfish</h1>
+  <h1>♟ You vs Stockfish</h1>
   <div id="board"></div>
   <div id="status"></div>
   <div id="fen"></div>
