--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aiden's Chess Bot</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/chessboard.js/1.0.0/chessboard-1.0.0.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Aiden vs Stockfish</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/stockfish@11.0.0/dist/stockfish.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chessboard.js/1.0.0/chessboard-1.0.0.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chessboard.js/1.0.0/chessboard.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chessboard.js/1.0.0/chessboard.min.css" />
   <style>
     body {
-      margin: 0;
+      background-color: #1a1a1a;
+      color: white;
       font-family: sans-serif;
-      background: #1a1a1a;
-      color: #fff;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
       padding: 20px;
     }
@@ -29,7 +26,7 @@
       width: 360px;
     }
 
-    #status, #fen, #pgn, #history, #timer {
+    #status, #fen, #pgn, #history {
       margin-top: 10px;
       font-size: 14px;
       color: #ccc;
@@ -39,16 +36,14 @@
       margin-top: 20px;
       display: flex;
       gap: 10px;
-      flex-wrap: wrap;
-      justify-content: center;
     }
 
     button {
       padding: 8px 16px;
       border: none;
-      border-radius: 4px;
       background: #444;
-      color: #fff;
+      color: white;
+      border-radius: 4px;
       cursor: pointer;
     }
 
@@ -58,12 +53,11 @@
   </style>
 </head>
 <body>
-  <h1>♟ You vs Stockfish</h1>
+  <h1>♟ Aiden vs Stockfish</h1>
   <div id="board"></div>
   <div id="status"></div>
   <div id="fen"></div>
   <div id="pgn"></div>
-  <div id="timer"></div>
   <div id="history"></div>
 
   <div id="controls">
@@ -73,12 +67,15 @@
     <button onclick="resetGame()">Reset</button>
   </div>
 
+  <!-- Load working WASM version of Stockfish -->
+  <script src="https://rawcdn.githack.com/niklasf/stockfish.js/gh-pages/stockfish.asm.js"></script>
+
   <script>
     let board = null;
     let game = new Chess();
-    let engine = STOCKFISH();
-    let timerStart = null;
+    let engine = new Worker("https://rawcdn.githack.com/niklasf/stockfish.js/gh-pages/stockfish.asm.js");
     let historyLog = [];
+    let engineSkill = 5;
 
     function updateStatus() {
       let status = '';
@@ -99,16 +96,9 @@
       document.getElementById('history').textContent = 'Moves: ' + historyLog.join(', ');
     }
 
-    function makeEngineMove() {
-      engine.postMessage('position fen ' + game.fen());
-      engine.postMessage('go depth ' + engineSkill);
-    }
-
-    let engineSkill = 5;
-    engine.onmessage = function (e) {
-      if (e && typeof e === 'object') e = e.data;
-      if (e.startsWith('bestmove')) {
-        const move = e.split(' ')[1];
+    engine.onmessage = function (event) {
+      if (typeof event.data === 'string' && event.data.startsWith('bestmove')) {
+        const move = event.data.split(' ')[1];
         if (move) {
           game.move({ from: move.substring(0, 2), to: move.substring(2, 4), promotion: 'q' });
           historyLog.push(move);
@@ -117,6 +107,11 @@
         }
       }
     };
+
+    function makeEngineMove() {
+      engine.postMessage('position fen ' + game.fen());
+      engine.postMessage('go depth ' + engineSkill);
+    }
 
     function onDragStart(source, piece) {
       if (game.game_over() || piece.search(/^b/) !== -1) return false;
@@ -144,8 +139,6 @@
     function startGame(difficulty) {
       engineSkill = difficulty === 'easy' ? 2 : difficulty === 'medium' ? 5 : 10;
       resetGame();
-      timerStart = Date.now();
-      document.getElementById('timer').textContent = 'Timer started';
     }
 
     board = Chessboard('board', {
