--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Aiden vs Stockfish</title>
+  <title>Aiden vs Local Chess Bot</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chessboard.js/1.0.0/chessboard.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chessboard.js/1.0.0/chessboard.min.css" />
@@ -53,7 +53,7 @@
   </style>
 </head>
 <body>
-  <h1>♟ Aiden vs Stockfish</h1>
+  <h1>♟ Aiden vs Simple Bot</h1>
   <div id="board"></div>
   <div id="status"></div>
   <div id="fen"></div>
@@ -61,21 +61,14 @@
   <div id="history"></div>
 
   <div id="controls">
-    <button onclick="startGame('easy')">Easy</button>
-    <button onclick="startGame('medium')">Medium</button>
-    <button onclick="startGame('hard')">Hard</button>
+    <button onclick="startGame()">Start Game</button>
     <button onclick="resetGame()">Reset</button>
   </div>
-
-  <!-- Load working WASM version of Stockfish -->
-  <script src="https://rawcdn.githack.com/niklasf/stockfish.js/gh-pages/stockfish.asm.js"></script>
 
   <script>
     let board = null;
     let game = new Chess();
-    let engine = new Worker("https://rawcdn.githack.com/niklasf/stockfish.js/gh-pages/stockfish.asm.js");
     let historyLog = [];
-    let engineSkill = 5;
 
     function updateStatus() {
       let status = '';
@@ -96,21 +89,15 @@
       document.getElementById('history').textContent = 'Moves: ' + historyLog.join(', ');
     }
 
-    engine.onmessage = function (event) {
-      if (typeof event.data === 'string' && event.data.startsWith('bestmove')) {
-        const move = event.data.split(' ')[1];
-        if (move) {
-          game.move({ from: move.substring(0, 2), to: move.substring(2, 4), promotion: 'q' });
-          historyLog.push(move);
-          board.position(game.fen());
-          updateStatus();
-        }
+    function makeBotMove() {
+      const moves = game.moves();
+      if (moves.length > 0) {
+        const move = moves[Math.floor(Math.random() * moves.length)];
+        game.move(move);
+        historyLog.push(move);
+        board.position(game.fen());
+        updateStatus();
       }
-    };
-
-    function makeEngineMove() {
-      engine.postMessage('position fen ' + game.fen());
-      engine.postMessage('go depth ' + engineSkill);
     }
 
     function onDragStart(source, piece) {
@@ -122,7 +109,7 @@
       if (move === null) return 'snapback';
       historyLog.push(source + target);
       updateStatus();
-      setTimeout(makeEngineMove, 250);
+      setTimeout(makeBotMove, 500);
     }
 
     function onSnapEnd() {
@@ -136,8 +123,7 @@
       updateStatus();
     }
 
-    function startGame(difficulty) {
-      engineSkill = difficulty === 'easy' ? 2 : difficulty === 'medium' ? 5 : 10;
+    function startGame() {
       resetGame();
     }
 
